main_app/static/style.css
.to-fade-in{
    opacity: 0;
    transform: translateY(50px);
    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
}

.fade-in {
    opacity: 1;
    transform: translateY(0);
}

.js-scroll {
    opacity: 0;
    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
}

.js-scrolled {
    opacity: 1;
}

.text-overlay-1 {
    position: absolute;
    top: 320px;
    left: 100px;
    color: white;
}

.write-up {
    background-color: #4258FF;
    border-radius: 0px 30px 0px 30px;
    color: white;
}

.selected-service {
    background-color: #4258FF;
    color: white;
}

.invalid-input {
    border: 1px solid red;
}

.highlight-label {
    color: red;
}

hr {
    border: none;
    height: 1px;
    color: #333;
    background-color: #333;
    margin: 0px;
}

